# gtksourceview

./: configure.ac
gtksourceview/: Makefile.am  gtksource.h
gtksourceview/completion-providers/: Makefile.am
gtksourceview/completion-providers/vim-words/: Makefile.am  gtksourcecompletionvimwords.c  gtksourcecompletionvimwords.h  gtksourcecompletionvimwordsproposal.c  gtksourcecompletionvimwordsproposal.h
gtksourceview/completion-providers/words/: gtksourcecompletionwords.c
tests/: test-completion.c  test-completion.ui  test-search.c
